modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allow-privileged/rendered/test_samples/pods/001-002-allowed-privileged-false.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed-privileged-false
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          securityContext:
            privileged: false
