modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allow-privileged/rendered/test_samples/pods/007-014-023-allowed-by-exception-privileged-true.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    labels:
        security.deckhouse.io/security-policy-exception: allow-privileged-true
    name: allowed-by-exception-privileged-true
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          securityContext:
            privileged: true
