modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allow-privileged/rendered/test_samples/pods/008-020-disallowed-no-exception-label.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-no-exception-label
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          securityContext:
            privileged: true
