modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allow-privileged/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-privileged-container
tests:
  - name: pss-baseline
    template: constraint-template.yaml
    constraint: ../constraints/pss_baseline.yaml
    cases:
      - name: 002-allowed-privileged-false
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-002-allowed-privileged-false.yaml
        assertions:
          - violations: "no"
      - name: 007-allowed-no-securitycontext
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/002-007-allowed-no-securitycontext.yaml
        assertions:
          - violations: "no"
      - name: 006-disallowed-privileged-true
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/003-006-disallowed-privileged-true.yaml
        assertions:
          - violations: "yes"
      - name: 005-disallowed-multiple-containers-one-privileged-true
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/004-005-disallowed-multiple-containers-one-privileged-true.yaml
        assertions:
          - violations: "yes"
      - name: 004-disallowed-initcontainer-privileged-true
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/005-004-disallowed-initcontainer-privileged-true.yaml
        assertions:
          - violations: "yes"
      - name: 008-disallowed-ephemeralcontainer-privileged-true
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/006-008-disallowed-ephemeralcontainer-privileged-true.yaml
        assertions:
          - violations: "yes"
  - name: pss-baseline-with-exception
    template: constraint-template.yaml
    constraint: ../constraints/pss_baseline.yaml
    cases:
      - name: 014-023-allowed-by-exception-privileged-true
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-014-023-allowed-by-exception-privileged-true-inv-1.yaml
        object: test_samples/pods/007-014-023-allowed-by-exception-privileged-true.yaml
        assertions:
          - violations: "no"
      - name: 020-disallowed-no-exception-label
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/008-020-disallowed-no-exception-label.yaml
        assertions:
          - violations: "yes"
      - name: 012-021-disallowed-by-exception-empty-spec
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/002-012-021-disallowed-by-exception-empty-spec-inv-1.yaml
        object: test_samples/pods/009-012-021-disallowed-by-exception-empty-spec.yaml
        assertions:
          - violations: "yes"
  - name: pss-baseline-spe-container
    template: constraint-template.yaml
    constraint: ../constraints/pss_baseline.yaml
    cases:
      - name: 013-022-allowed-by-container-specific-exception-privileged-true
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/003-013-022-allowed-by-container-specific-exception-privileged-true-inv-1.yaml
        object: test_samples/pods/010-013-022-allowed-by-container-specific-exception-privileged-true.yaml
        assertions:
          - violations: "no"
